# rema_proxy

./: .cproject  .fpm  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md  ciaa.cpp  cloc.sh  config.ini  config.json  create_deb_pkg.sh  enero_2024.json  generate_svg.cpp  insp_session.cpp  inspection-session.cpp  knowledge.txt  main.cpp  net_client.cpp  net_commands.cpp  rema.cpp  rema_startup.json  restfull_api.cpp  server_json.cpp  syslogger.hpp  tool.cpp  tubesheet.csv  vcpkg.json  websocket-server.cpp
HXs/: config.json  convert.sh  tubesheet.csv
HXs/AT1_QK01_INLET(HOT)_mm/: config.json  tubesheet.csv
HXs/AT1_QK01_OUTLET(COLD)_mm/: tubesheet.csv
HXs/AT1_QK02_INLET(HOT)_mm/: tubesheet.csv
HXs/AT1_QK02_OUTLET(COLD)_mm/: tubesheet.csv
HXs/My AWESOME HX con el nomb/: config.json  tubesheet.csv
HXs/_cna1_moderador_QK1/: .~lock.tubesheet.csv#  config.ini  config.json  csv_to_svg.ini  tube_specs.csv  tubesheet.csv
HXs/_cna1_moderador_QK1/insp_plans/: .~lock.InspPlan1_M_2.csv#  .~lock.InspPlan1_M_3.csv#  InspPlan1_M_2.csv  InspPlan1_M_3.csv
HXs/_cna1_moderador_QK1/plans/: Plan1_M_1.csv  Plan1_M_4.csv
HXs/_cna1_moderador_QK1_mm/: .~lock.tubesheet.csv#  config.ini  config.json  tubesheet.csv
HXs/_cna1_moderador_QK1_mm/insp_plans/: InspPlan1_M_1.csv
HXs/_cna1_moderador_QK1_mm/plans/: Plan1_M_3.csv
HXs/_cne_moderador_3211_HX1/: config.ini  tubesheet.csv
HXs/_cne_moderador_3211_HX1/plans/: Plan1_M_1.csv
HXs/_cne_moderador_3211_HX2/: .~lock.tubesheet.csv#  config.ini  config.json  tubesheet.csv
HXs/_cne_moderador_3211_HX2/insp_plans/: InspPlan1_M_1.csv  InspPlan2_M_1.csv  InspPlan3_M_2.csv  InspPlan4_M_2.csv  InspPlan5_M_3.csv  InspPlan6_M_3.csv  InspPlan7_M_4.csv  InspPlan8_M_4.csv
HXs/_cne_moderador_3211_HX2/plans/: Plan4_M_2.csv
HXs/_cne_purificador_3335_HX2/: .~lock.tubesheet.csv#  config.ini  config.json  tubesheet.csv
HXs/_cne_purificador_3335_HX2/insp_plans/: InspPlan1_M_1.csv  InspPlan2_M_1.csv  InspPlan3_M_2.csv  InspPlan4_M_2.csv
HXs/_cne_purificador_3335_HX2/plans/: Plan1_M_1.csv  Plan2_M_1.csv  Plan3_M_2.csv  Plan4_M_2.csv
HXs/tubesheet/: config.json
cmake/: CompilerWarnings.cmake  Doxygen.cmake  FindRestbed.cmake  StandardSettings.cmake  clang-format.cmake
inc/: HX.hpp  HXs.hpp  active.hpp  chart.hpp  ciaa.hpp  circle_fit.hpp  circle_fns.hpp  client.hpp  command_net_client.hpp  csv.hpp  debug.hpp  expected.hpp  insp_session.hpp  inspection-session.hpp  log_pattern.hpp  logs_net_client.hpp  magic_enum.hpp  misc_fns.hpp  multipart.h  multipart.hpp  net_client.hpp  net_commands.hpp  points.hpp  rapidxml_ext.hpp  rema.hpp  restfull_api.hpp  session.hpp  svg.hpp  syslogger.hpp  telemetry.hpp  telemetry.pb.h  telemetry_net_client.hpp  time_utils.hpp  timer.hpp  tool.hpp  touch_probe.hpp  tube_entry.hpp  upload.hpp  watchdog_timer.hpp  websocket-server.hpp
inc/rapidxml-1.13/: rapidxml_print.hpp
insp_sessions/: Cne 2023.json  En MM.json  Interc2024.json  Purifier CNE.json  QK.json  QK1 Life Extension Program.json  QK1 with plans and seq.json  QK1 with plans.json  QK2024.json  adsf.json  afdsf.json  algo.json  ass.json  both.json  en inches.json  en pulgadas.json  grabame_esta.json  hx1.json  iii.json  inches.json  mm.json  mode2.json  moderador 1.json  new_api.json  nueva era.json  nuevo con units.json  nuevo mapa mm.json  ordered.json  otra en inch.json  otra.json  pablo.json  pepito.json  percent.json  purif.json  vamooo  vamooo ASS.json  vamooo carajooo.json  vamooo.json
rema/: rema.json
rema/tools/: .json  Eddy Test.json  Frenteadora.json  Offsets.json  Palpador.json  Soldadora Laser aa.json  Soldadora manguera abajo.json  Soldadora.json  Taponadora.json  aafd.json  adsfasfsa.json  asdf.json  biseladora.json  otra tool.json  soldadora.json  sss.json
sessions/: 888.json  Atucha 1.json  CUPON_1.json  Entrenamiento_Pablo_qk1_inlet.json  Purif.json  QK1 with plans.json  aa.json  entrenamiento_charly_qk1_inled.json  entrenamiento_eduardo_qk1_outled.json  entrenamiento_juan_qk1_inlet.json  entrenamiento_marcos_qk1_inlet.json  entrenamiento_ricardo_qk2_inled.json  hx1.json  inch.json  mm.json  mode2.json  nueva.json  nuevo con units.json  nuevo mapa mm.json  otra.json  practica_marcos.json  prueba 2.json  q1in.json  q1out.json  q2in.json  q2out.json
src/: CMakeLists.txt  HX.cpp  chart.cpp  client.cpp  inspection-session.cpp  main.cpp  net_client.cpp  rema.cpp  restfull_api.cpp  session.cpp  telemetry.pb.cpp  tool.cpp  upload.cpp  websocket-server.cpp
test/: CMakeLists.txt
wwwroot/: HXs.html  HXs_fileformats.html  about.html  cal_points.html  charts.html  closed_loop.html  config.html  datatables.html  example_hx.csv  example_hx_config.json  example_plan.csv  hole.html  hx.html  incremental.html  index.html  joystick.html  joystick2.html  logs.html  manage_plans.html  map.html  network_settings.html  plans_fileformats.html  session.html  sessions.html  settings.html  tool.html  tools.html  tubes.html  tubesheet.html  upload.html  websocket.html
wwwroot/css/: datatables.min.css  jquery-ui.css  jquery.flipswitch.css  rcswitcher.css  styles.css
wwwroot/js/: ajaxqueue.js  dataTables.row.show.js  dataTables.scroller.js  datatables.min.js  misc.js  rcswitcher.js  websocket_client.js
